--- a/environment.yml
+++ b/environment.yml
@@ -5,307 +5,307 @@ channels:
   - nvidia
   - conda-forge
 dependencies:
-  - aiohttp=3.8.3=py38h91455d4_1
-  - aiosignal=1.3.1=pyhd8ed1ab_0
-  - anyio=3.6.2=pyhd8ed1ab_0
-  - argon2-cffi=21.3.0=pyhd8ed1ab_0
-  - argon2-cffi-bindings=21.2.0=py38h91455d4_3
-  - arrow-cpp=10.0.1=h9c18f36_4_cpu
-  - asttokens=2.2.1=pyhd8ed1ab_0
-  - async-timeout=4.0.2=pyhd8ed1ab_0
-  - attrs=22.2.0=pyh71513ae_0
-  - aws-c-auth=0.6.21=h0fd8c68_3
-  - aws-c-cal=0.5.20=h4b5e85a_3
-  - aws-c-common=0.8.5=hcfcfb64_0
-  - aws-c-compression=0.2.16=h3dc32ea_0
-  - aws-c-event-stream=0.2.17=h4de63fd_1
-  - aws-c-http=0.7.0=h28290ff_0
-  - aws-c-io=0.13.12=hea55e33_1
-  - aws-c-mqtt=0.7.13=h0d1d87f_12
-  - aws-c-s3=0.2.1=h898862f_4
-  - aws-c-sdkutils=0.1.7=h3dc32ea_0
-  - aws-checksums=0.1.14=h3dc32ea_0
-  - aws-crt-cpp=0.18.16=h977b11b_8
-  - aws-sdk-cpp=1.9.379=haf3c795_7
-  - backcall=0.2.0=pyh9f0ad1d_0
-  - backports=1.0=pyhd8ed1ab_3
-  - backports.functools_lru_cache=1.6.4=pyhd8ed1ab_0
-  - beautifulsoup4=4.11.1=pyha770c72_0
-  - blas=2.116=mkl
-  - blas-devel=3.9.0=16_win64_mkl
-  - bleach=6.0.0=pyhd8ed1ab_0
-  - brotli=1.0.9=hcfcfb64_8
-  - brotli-bin=1.0.9=hcfcfb64_8
-  - brotlipy=0.7.0=py38h91455d4_1005
-  - bzip2=1.0.8=h8ffe710_4
-  - c-ares=1.18.1=h8ffe710_0
-  - ca-certificates=2022.12.7=h5b45459_0
-  - certifi=2022.12.7=pyhd8ed1ab_0
-  - cffi=1.15.1=py38h57701bc_3
-  - charset-normalizer=2.1.1=pyhd8ed1ab_0
-  - click=8.1.3=win_pyhd8ed1ab_2
-  - colorama=0.4.6=pyhd8ed1ab_0
-  - comm=0.1.2=pyhd8ed1ab_0
-  - contourpy=1.0.7=py38hb1fd069_0
-  - cryptography=39.0.0=py38h95f5157_0
-  - cuda=11.7.1=0
-  - cuda-cccl=11.7.91=0
-  - cuda-command-line-tools=11.7.1=0
-  - cuda-compiler=11.7.1=0
-  - cuda-cudart=11.7.99=0
-  - cuda-cudart-dev=11.7.99=0
-  - cuda-cuobjdump=11.7.91=0
-  - cuda-cupti=11.7.101=0
-  - cuda-cuxxfilt=11.7.91=0
-  - cuda-demo-suite=12.0.76=0
-  - cuda-documentation=12.0.76=0
-  - cuda-libraries=11.7.1=0
-  - cuda-libraries-dev=11.7.1=0
-  - cuda-memcheck=11.8.86=0
-  - cuda-nsight-compute=12.0.0=0
-  - cuda-nvcc=11.7.99=0
-  - cuda-nvdisasm=12.0.76=0
-  - cuda-nvml-dev=11.7.91=0
-  - cuda-nvprof=12.0.90=0
-  - cuda-nvprune=11.7.91=0
-  - cuda-nvrtc=11.7.99=0
-  - cuda-nvrtc-dev=11.7.99=0
-  - cuda-nvtx=11.7.91=0
-  - cuda-nvvp=12.0.90=0
-  - cuda-runtime=11.7.1=0
-  - cuda-sanitizer-api=12.0.90=0
-  - cuda-toolkit=11.7.1=0
-  - cuda-tools=11.7.1=0
-  - cuda-visual-tools=11.7.1=0
-  - cycler=0.11.0=pyhd8ed1ab_0
-  - dataclasses=0.8=pyhc8e2a94_3
-  - datasets=2.8.0=py_0
-  - debugpy=1.6.6=py38hd3f51b4_0
-  - decorator=5.1.1=pyhd8ed1ab_0
-  - defusedxml=0.7.1=pyhd8ed1ab_0
-  - dill=0.3.6=pyhd8ed1ab_1
-  - entrypoints=0.4=pyhd8ed1ab_0
-  - executing=1.2.0=pyhd8ed1ab_0
-  - filelock=3.9.0=pyhd8ed1ab_0
-  - flit-core=3.8.0=pyhd8ed1ab_0
-  - fonttools=4.38.0=py38h91455d4_1
-  - freetype=2.12.1=h546665d_1
-  - frozenlist=1.3.3=py38h91455d4_0
-  - fsspec=2023.1.0=pyhd8ed1ab_0
-  - gettext=0.21.1=h5728263_0
-  - gflags=2.2.2=ha925a31_1004
-  - glib=2.74.1=h12be248_1
-  - glib-tools=2.74.1=h12be248_1
-  - glog=0.6.0=h4797de2_0
-  - gst-plugins-base=1.21.3=h001b923_1
-  - gstreamer=1.21.3=h6b5321d_1
-  - huggingface_hub=0.12.0=py_0
-  - icu=70.1=h0e60522_0
-  - idna=3.4=pyhd8ed1ab_0
-  - importlib-metadata=6.0.0=pyha770c72_0
-  - importlib_metadata=6.0.0=hd8ed1ab_0
-  - importlib_resources=5.10.2=pyhd8ed1ab_0
-  - intel-openmp=2023.0.0=h57928b3_25922
-  - ipykernel=6.20.2=pyh025b116_0
-  - ipython=8.8.0=pyh08f2357_0
-  - ipython_genutils=0.2.0=py_1
-  - ipywidgets=8.0.4=pyhd8ed1ab_0
-  - jedi=0.18.2=pyhd8ed1ab_0
-  - jinja2=3.1.2=pyhd8ed1ab_1
-  - joblib=1.2.0=pyhd8ed1ab_0
-  - jpeg=9e=h8ffe710_2
-  - jsonschema=4.17.3=pyhd8ed1ab_0
-  - jupyter=1.0.0=py38haa244fe_8
-  - jupyter_client=7.4.9=pyhd8ed1ab_0
-  - jupyter_console=6.4.4=pyhd8ed1ab_0
-  - jupyter_core=5.1.5=py38haa244fe_0
-  - jupyter_events=0.6.3=pyhd8ed1ab_0
-  - jupyter_server=2.1.0=pyhd8ed1ab_0
-  - jupyter_server_terminals=0.4.4=pyhd8ed1ab_1
-  - jupyterlab_pygments=0.2.2=pyhd8ed1ab_0
-  - jupyterlab_widgets=3.0.5=pyhd8ed1ab_0
-  - kiwisolver=1.4.4=py38hb1fd069_1
-  - krb5=1.20.1=heb0366b_0
-  - lcms2=2.14=ha5c8aab_1
-  - lerc=4.0.0=h63175ca_0
-  - libabseil=20220623.0=cxx17_h1a56200_6
-  - libarrow=10.0.1=h226723c_4_cpu
-  - libblas=3.9.0=16_win64_mkl
-  - libbrotlicommon=1.0.9=hcfcfb64_8
-  - libbrotlidec=1.0.9=hcfcfb64_8
-  - libbrotlienc=1.0.9=hcfcfb64_8
-  - libcblas=3.9.0=16_win64_mkl
-  - libclang=15.0.7=default_h77d9078_0
-  - libclang13=15.0.7=default_h77d9078_0
-  - libcrc32c=1.1.2=h0e60522_0
-  - libcublas=11.10.3.66=0
-  - libcublas-dev=11.10.3.66=0
-  - libcufft=10.7.2.124=0
-  - libcufft-dev=10.7.2.124=0
-  - libcurand=10.3.1.50=0
-  - libcurand-dev=10.3.1.50=0
-  - libcurl=7.87.0=h68f0423_0
-  - libcusolver=11.4.0.1=0
-  - libcusolver-dev=11.4.0.1=0
-  - libcusparse=11.7.4.91=0
-  - libcusparse-dev=11.7.4.91=0
-  - libdeflate=1.17=hcfcfb64_0
-  - libffi=3.4.2=h8ffe710_5
-  - libglib=2.74.1=he8f3873_1
-  - libgoogle-cloud=2.5.0=h5fc25aa_1
-  - libgrpc=1.51.1=h6a6baca_0
-  - libhwloc=2.8.0=h039e092_1
-  - libiconv=1.17=h8ffe710_0
-  - libjpeg-turbo=2.1.4=hcfcfb64_0
-  - liblapack=3.9.0=16_win64_mkl
-  - liblapacke=3.9.0=16_win64_mkl
-  - libnpp=11.7.4.75=0
-  - libnpp-dev=11.7.4.75=0
-  - libnvjpeg=11.8.0.2=0
-  - libnvjpeg-dev=11.8.0.2=0
-  - libogg=1.3.4=h8ffe710_1
-  - libpng=1.6.39=h19919ed_0
-  - libprotobuf=3.21.12=h12be248_0
-  - libsodium=1.0.18=h8d14728_1
-  - libsqlite=3.40.0=hcfcfb64_0
-  - libssh2=1.10.0=h9a1e1f7_3
-  - libthrift=0.16.0=h9ce19ad_2
-  - libtiff=4.5.0=hf8721a0_2
-  - libutf8proc=2.8.0=h82a8f57_0
-  - libuv=1.44.2=h8ffe710_0
-  - libvorbis=1.3.7=h0e60522_0
-  - libwebp-base=1.2.4=h8ffe710_0
-  - libxcb=1.13=hcd874cb_1004
-  - libxml2=2.10.3=hc3477c8_0
-  - libzlib=1.2.13=hcfcfb64_4
-  - lz4-c=1.9.3=h8ffe710_1
-  - m2w64-gcc-libgfortran=5.3.0=6
-  - m2w64-gcc-libs=5.3.0=7
-  - m2w64-gcc-libs-core=5.3.0=7
-  - m2w64-gmp=6.1.0=2
-  - m2w64-libwinpthread-git=5.0.0.4634.697f757=2
-  - markupsafe=2.1.2=py38h91455d4_0
-  - matplotlib=3.6.3=py38haa244fe_0
-  - matplotlib-base=3.6.3=py38h528a6c7_0
-  - matplotlib-inline=0.1.6=pyhd8ed1ab_0
-  - mistune=2.0.4=pyhd8ed1ab_0
-  - mkl=2022.1.0=h6a75c08_874
-  - mkl-devel=2022.1.0=h57928b3_875
-  - mkl-include=2022.1.0=h6a75c08_874
-  - msys2-conda-epoch=20160418=1
-  - multidict=6.0.4=py38h91455d4_0
-  - multiprocess=0.70.14=py38h91455d4_3
-  - munkres=1.1.4=pyh9f0ad1d_0
-  - nbclassic=0.4.8=pyhd8ed1ab_0
-  - nbclient=0.7.2=pyhd8ed1ab_0
-  - nbconvert=7.2.9=pyhd8ed1ab_0
-  - nbconvert-core=7.2.9=pyhd8ed1ab_0
-  - nbconvert-pandoc=7.2.9=pyhd8ed1ab_0
-  - nbformat=5.7.3=pyhd8ed1ab_0
-  - nest-asyncio=1.5.6=pyhd8ed1ab_0
-  - notebook=6.5.2=pyha770c72_1
-  - notebook-shim=0.2.2=pyhd8ed1ab_0
-  - nsight-compute=2022.4.0.15=0
-  - numpy=1.24.1=py38h90ce339_0
-  - openjpeg=2.5.0=ha2aaf27_2
-  - openssl=3.0.7=hcfcfb64_1
-  - packaging=23.0=pyhd8ed1ab_0
-  - pandas=1.5.3=py38h5846ac1_0
-  - pandoc=2.19.2=h57928b3_1
-  - pandocfilters=1.5.0=pyhd8ed1ab_0
-  - parquet-cpp=1.5.1=2
-  - parso=0.8.3=pyhd8ed1ab_0
-  - pcre2=10.40=h17e33f8_0
-  - pickleshare=0.7.5=py_1003
-  - pillow=9.4.0=py38h409c3de_0
-  - pip=22.3.1=pyhd8ed1ab_0
-  - pkgutil-resolve-name=1.3.10=pyhd8ed1ab_0
-  - platformdirs=2.6.2=pyhd8ed1ab_0
-  - ply=3.11=py_1
-  - prometheus_client=0.16.0=pyhd8ed1ab_0
-  - prompt-toolkit=3.0.36=pyha770c72_0
-  - prompt_toolkit=3.0.36=hd8ed1ab_0
-  - protobuf=4.21.12=py38hd3f51b4_0
-  - psutil=5.9.4=py38h91455d4_0
-  - pthread-stubs=0.4=hcd874cb_1001
-  - pthreads-win32=2.9.1=hfa6e2cd_3
-  - pure_eval=0.2.2=pyhd8ed1ab_0
-  - pyarrow=10.0.1=py38hdf5990d_4_cpu
-  - pycparser=2.21=pyhd8ed1ab_0
-  - pygments=2.14.0=pyhd8ed1ab_0
-  - pyopenssl=23.0.0=pyhd8ed1ab_0
-  - pyparsing=3.0.9=pyhd8ed1ab_0
-  - pyqt=5.15.7=py38hd6c051e_3
-  - pyqt5-sip=12.11.0=py38hd3f51b4_3
-  - pyrsistent=0.19.3=py38h91455d4_0
-  - pysocks=1.7.1=pyh0701188_6
-  - python=3.8.15=h4de0772_0_cpython
-  - python-dateutil=2.8.2=pyhd8ed1ab_0
-  - python-fastjsonschema=2.16.2=pyhd8ed1ab_0
-  - python-json-logger=2.0.4=pyhd8ed1ab_0
-  - python-xxhash=3.2.0=py38h91455d4_0
-  - python_abi=3.8=3_cp38
-  - pytorch=1.13.1=py3.8_cuda11.7_cudnn8_0
-  - pytorch-cuda=11.7=h67b0de4_1
-  - pytorch-mutex=1.0=cuda
-  - pytz=2022.7.1=pyhd8ed1ab_0
-  - pywin32=304=py38hd3f51b4_2
-  - pywinpty=2.0.10=py38hd3f51b4_0
-  - pyyaml=6.0=py38h91455d4_5
-  - pyzmq=25.0.0=py38ha85f68a_0
-  - qt-main=5.15.6=h9580fe5_6
-  - qtconsole=5.4.0=pyhd8ed1ab_0
-  - qtconsole-base=5.4.0=pyha770c72_0
-  - qtpy=2.3.0=pyhd8ed1ab_0
-  - re2=2022.06.01=h0e60522_1
-  - regex=2022.10.31=py38h91455d4_0
-  - requests=2.28.2=pyhd8ed1ab_0
-  - rfc3339-validator=0.1.4=pyhd8ed1ab_0
-  - rfc3986-validator=0.1.1=pyh9f0ad1d_0
-  - sacremoses=master=py_0
-  - send2trash=1.8.0=pyhd8ed1ab_0
-  - setuptools=66.1.1=pyhd8ed1ab_0
-  - sip=6.7.5=py38hd3f51b4_0
-  - six=1.16.0=pyh6c4a22f_0
-  - snappy=1.1.9=hfb803bf_2
-  - sniffio=1.3.0=pyhd8ed1ab_0
-  - soupsieve=2.3.2.post1=pyhd8ed1ab_0
-  - stack_data=0.6.2=pyhd8ed1ab_0
-  - tbb=2021.7.0=h91493d7_1
-  - terminado=0.17.0=pyh08f2357_0
-  - tinycss2=1.2.1=pyhd8ed1ab_0
-  - tk=8.6.12=h8ffe710_0
-  - tokenizers=0.13.0.dev0=py38_0
-  - toml=0.10.2=pyhd8ed1ab_0
-  - tornado=6.2=py38h91455d4_1
-  - tqdm=4.64.1=pyhd8ed1ab_0
-  - traitlets=5.8.1=pyhd8ed1ab_0
-  - transformers=4.26.0=py_0
-  - typing-extensions=4.4.0=hd8ed1ab_0
-  - typing_extensions=4.4.0=pyha770c72_0
-  - ucrt=10.0.22621.0=h57928b3_0
-  - unicodedata2=15.0.0=py38h91455d4_0
-  - urllib3=1.26.14=pyhd8ed1ab_0
-  - vc=14.3=hb6edc58_10
-  - vs2015_runtime=14.34.31931=h4c5c07a_10
-  - wcwidth=0.2.6=pyhd8ed1ab_0
-  - webencodings=0.5.1=py_1
-  - websocket-client=1.4.2=pyhd8ed1ab_0
-  - wheel=0.38.4=pyhd8ed1ab_0
-  - widgetsnbextension=4.0.5=pyhd8ed1ab_0
-  - win_inet_pton=1.1.0=pyhd8ed1ab_6
-  - winpty=0.4.3=4
-  - xorg-libxau=1.0.9=hcd874cb_0
-  - xorg-libxdmcp=1.1.3=hcd874cb_0
-  - xxhash=0.8.1=hcfcfb64_0
-  - xz=5.2.6=h8d14728_0
-  - yaml=0.2.5=h8ffe710_2
-  - yarl=1.8.2=py38h91455d4_0
-  - zeromq=4.3.4=h0e60522_1
-  - zipp=3.11.0=pyhd8ed1ab_0
-  - zlib=1.2.13=hcfcfb64_4
-  - zstd=1.5.2=h12be248_6
+  - aiohttp=3.8.3
+  - aiosignal=1.3.1
+  - anyio=3.6.2
+  - argon2-cffi=21.3.0
+  - argon2-cffi-bindings=21.2.0
+  - arrow-cpp=10.0.1
+  - asttokens=2.2.1
+  - async-timeout=4.0.2
+  - attrs=22.2.0
+  - aws-c-auth=0.6.21
+  - aws-c-cal=0.5.20
+  - aws-c-common=0.8.5
+  - aws-c-compression=0.2.16
+  - aws-c-event-stream=0.2.17
+  - aws-c-http=0.7.0
+  - aws-c-io=0.13.12
+  - aws-c-mqtt=0.7.13
+  - aws-c-s3=0.2.1
+  - aws-c-sdkutils=0.1.7
+  - aws-checksums=0.1.14
+  - aws-crt-cpp=0.18.16
+  - aws-sdk-cpp=1.9.379
+  - backcall=0.2.0
+  - backports=1.0
+  - backports.functools_lru_cache=1.6.4
+  - beautifulsoup4=4.11.1
+  - blas=2.116
+  - blas-devel=3.9.0
+  - bleach=6.0.0
+  - brotli=1.0.9
+  - brotli-bin=1.0.9
+  - brotlipy=0.7.0
+  - bzip2=1.0.8
+  - c-ares=1.18.1
+  - ca-certificates=2022.12.7
+  - certifi=2022.12.7
+  - cffi=1.15.1
+  - charset-normalizer=2.1.1
+  - click=8.1.3
+  - colorama=0.4.6
+  - comm=0.1.2
+  - contourpy=1.0.7
+  - cryptography=39.0.0
+  - cuda=11.7.1
+  - cuda-cccl=11.7.91
+  - cuda-command-line-tools=11.7.1
+  - cuda-compiler=11.7.1
+  - cuda-cudart=11.7.99
+  - cuda-cudart-dev=11.7.99
+  - cuda-cuobjdump=11.7.91
+  - cuda-cupti=11.7.101
+  - cuda-cuxxfilt=11.7.91
+  - cuda-demo-suite=12.0.76
+  - cuda-documentation=12.0.76
+  - cuda-libraries=11.7.1
+  - cuda-libraries-dev=11.7.1
+  - cuda-memcheck=11.8.86
+  - cuda-nsight-compute=12.0.0
+  - cuda-nvcc=11.7.99
+  - cuda-nvdisasm=12.0.76
+  - cuda-nvml-dev=11.7.91
+  - cuda-nvprof=12.0.90
+  - cuda-nvprune=11.7.91
+  - cuda-nvrtc=11.7.99
+  - cuda-nvrtc-dev=11.7.99
+  - cuda-nvtx=11.7.91
+  - cuda-nvvp=12.0.90
+  - cuda-runtime=11.7.1
+  - cuda-sanitizer-api=12.0.90
+  - cuda-toolkit=11.7.1
+  - cuda-tools=11.7.1
+  - cuda-visual-tools=11.7.1
+  - cycler=0.11.0
+  - dataclasses=0.8
+  - datasets=2.8.0
+  - debugpy=1.6.6
+  - decorator=5.1.1
+  - defusedxml=0.7.1
+  - dill=0.3.6
+  - entrypoints=0.4
+  - executing=1.2.0
+  - filelock=3.9.0
+  - flit-core=3.8.0
+  - fonttools=4.38.0
+  - freetype=2.12.1
+  - frozenlist=1.3.3
+  - fsspec=2023.1.0
+  - gettext=0.21.1
+  - gflags=2.2.2
+  - glib=2.74.1
+  - glib-tools=2.74.1
+  - glog=0.6.0
+  - gst-plugins-base=1.21.3
+  - gstreamer=1.21.3
+  - huggingface_hub=0.12.0
+  - icu=70.1
+  - idna=3.4
+  - importlib-metadata=6.0.0
+  - importlib_metadata=6.0.0
+  - importlib_resources=5.10.2
+  - intel-openmp=2023.0.0
+  - ipykernel=6.20.2
+  - ipython=8.8.0
+  - ipython_genutils=0.2.0
+  - ipywidgets=8.0.4
+  - jedi=0.18.2
+  - jinja2=3.1.2
+  - joblib=1.2.0
+  - jpeg=9e
+  - jsonschema=4.17.3
+  - jupyter=1.0.0
+  - jupyter_client=7.4.9
+  - jupyter_console=6.4.4
+  - jupyter_core=5.1.5
+  - jupyter_events=0.6.3
+  - jupyter_server=2.1.0
+  - jupyter_server_terminals=0.4.4
+  - jupyterlab_pygments=0.2.2
+  - jupyterlab_widgets=3.0.5
+  - kiwisolver=1.4.4
+  - krb5=1.20.1
+  - lcms2=2.14
+  - lerc=4.0.0
+  - libabseil=20220623.0
+  - libarrow=10.0.1
+  - libblas=3.9.0
+  - libbrotlicommon=1.0.9
+  - libbrotlidec=1.0.9
+  - libbrotlienc=1.0.9
+  - libcblas=3.9.0
+  - libclang=15.0.7
+  - libclang13=15.0.7
+  - libcrc32c=1.1.2
+  - libcublas=11.10.3.66
+  - libcublas-dev=11.10.3.66
+  - libcufft=10.7.2.124
+  - libcufft-dev=10.7.2.124
+  - libcurand=10.3.1.50
+  - libcurand-dev=10.3.1.50
+  - libcurl=7.87.0
+  - libcusolver=11.4.0.1
+  - libcusolver-dev=11.4.0.1
+  - libcusparse=11.7.4.91
+  - libcusparse-dev=11.7.4.91
+  - libdeflate=1.17
+  - libffi=3.4.2
+  - libglib=2.74.1
+  - libgoogle-cloud=2.5.0
+  - libgrpc=1.51.1
+  - libhwloc=2.8.0
+  - libiconv=1.17
+  - libjpeg-turbo=2.1.4
+  - liblapack=3.9.0
+  - liblapacke=3.9.0
+  - libnpp=11.7.4.75
+  - libnpp-dev=11.7.4.75
+  - libnvjpeg=11.8.0.2
+  - libnvjpeg-dev=11.8.0.2
+  - libogg=1.3.4
+  - libpng=1.6.39
+  - libprotobuf=3.21.12
+  - libsodium=1.0.18
+  - libsqlite=3.40.0
+  - libssh2=1.10.0
+  - libthrift=0.16.0
+  - libtiff=4.5.0
+  - libutf8proc=2.8.0
+  - libuv=1.44.2
+  - libvorbis=1.3.7
+  - libwebp-base=1.2.4
+  - libxcb=1.13
+  - libxml2=2.10.3
+  - libzlib=1.2.13
+  - lz4-c=1.9.3
+  - m2w64-gcc-libgfortran=5.3.0
+  - m2w64-gcc-libs=5.3.0
+  - m2w64-gcc-libs-core=5.3.0
+  - m2w64-gmp=6.1.0
+  - m2w64-libwinpthread-git=5.0.0.4634.697f757
+  - markupsafe=2.1.2
+  - matplotlib=3.6.3
+  - matplotlib-base=3.6.3
+  - matplotlib-inline=0.1.6
+  - mistune=2.0.4
+  - mkl=2022.1.0
+  - mkl-devel=2022.1.0
+  - mkl-include=2022.1.0
+  - msys2-conda-epoch=20160418
+  - multidict=6.0.4
+  - multiprocess=0.70.14
+  - munkres=1.1.4
+  - nbclassic=0.4.8
+  - nbclient=0.7.2
+  - nbconvert=7.2.9
+  - nbconvert-core=7.2.9
+  - nbconvert-pandoc=7.2.9
+  - nbformat=5.7.3
+  - nest-asyncio=1.5.6
+  - notebook=6.5.2
+  - notebook-shim=0.2.2
+  - nsight-compute=2022.4.0.15
+  - numpy=1.24.1
+  - openjpeg=2.5.0
+  - openssl=3.0.7
+  - packaging=23.0
+  - pandas=1.5.3
+  - pandoc=2.19.2
+  - pandocfilters=1.5.0
+  - parquet-cpp=1.5.1
+  - parso=0.8.3
+  - pcre2=10.40
+  - pickleshare=0.7.5
+  - pillow=9.4.0
+  - pip=22.3.1
+  - pkgutil-resolve-name=1.3.10
+  - platformdirs=2.6.2
+  - ply=3.11
+  - prometheus_client=0.16.0
+  - prompt-toolkit=3.0.36
+  - prompt_toolkit=3.0.36
+  - protobuf=4.21.12
+  - psutil=5.9.4
+  - pthread-stubs=0.4
+  - pthreads-win32=2.9.1
+  - pure_eval=0.2.2
+  - pyarrow=10.0.1
+  - pycparser=2.21
+  - pygments=2.14.0
+  - pyopenssl=23.0.0
+  - pyparsing=3.0.9
+  - pyqt=5.15.7
+  - pyqt5-sip=12.11.0
+  - pyrsistent=0.19.3
+  - pysocks=1.7.1
+  - python=3.8.15
+  - python-dateutil=2.8.2
+  - python-fastjsonschema=2.16.2
+  - python-json-logger=2.0.4
+  - python-xxhash=3.2.0
+  - python_abi=3.8
+  - pytorch=1.13.1
+  - pytorch-cuda=11.7
+  - pytorch-mutex=1.0
+  - pytz=2022.7.1
+  - pywin32=304
+  - pywinpty=2.0.10
+  - pyyaml=6.0
+  - pyzmq=25.0.0
+  - qt-main=5.15.6
+  - qtconsole=5.4.0
+  - qtconsole-base=5.4.0
+  - qtpy=2.3.0
+  - re2=2022.06.01
+  - regex=2022.10.31
+  - requests=2.28.2
+  - rfc3339-validator=0.1.4
+  - rfc3986-validator=0.1.1
+  - sacremoses=master
+  - send2trash=1.8.0
+  - setuptools=66.1.1
+  - sip=6.7.5
+  - six=1.16.0
+  - snappy=1.1.9
+  - sniffio=1.3.0
+  - soupsieve=2.3.2.post1
+  - stack_data=0.6.2
+  - tbb=2021.7.0
+  - terminado=0.17.0
+  - tinycss2=1.2.1
+  - tk=8.6.12
+  - tokenizers=0.13.0.dev0
+  - toml=0.10.2
+  - tornado=6.2
+  - tqdm=4.64.1
+  - traitlets=5.8.1
+  - transformers=4.26.0
+  - typing-extensions=4.4.0
+  - typing_extensions=4.4.0
+  - ucrt=10.0.22621.0
+  - unicodedata2=15.0.0
+  - urllib3=1.26.14
+  - vc=14.3
+  - vs2015_runtime=14.34.31931
+  - wcwidth=0.2.6
+  - webencodings=0.5.1
+  - websocket-client=1.4.2
+  - wheel=0.38.4
+  - widgetsnbextension=4.0.5
+  - win_inet_pton=1.1.0
+  - winpty=0.4.3
+  - xorg-libxau=1.0.9
+  - xorg-libxdmcp=1.1.3
+  - xxhash=0.8.1
+  - xz=5.2.6
+  - yaml=0.2.5
+  - yarl=1.8.2
+  - zeromq=4.3.4
+  - zipp=3.11.0
+  - zlib=1.2.13
+  - zstd=1.5.2
   - pip:
-    - torchaudio==0.13.1
-    - torchvision==0.14.1
+      - torchaudio==0.13.1
+      - torchvision==0.14.1
 prefix: D:\mambaforge\envs\nlp_urap
