--- a/requirements.txt
+++ b/requirements.txt
@@ -1,149 +1,152 @@
-aiohttp @ file:///D:/bld/aiohttp_1666878637984/work
-aiosignal @ file:///home/conda/feedstock_root/build_artifacts/aiosignal_1667935791922/work
-anyio @ file:///home/conda/feedstock_root/build_artifacts/anyio_1666191106763/work/dist
+aiohttp==3.8.3
+aiosignal==1.3.1
+anyio==3.6.2
 apache-beam==2.43.0
-argon2-cffi @ file:///home/conda/feedstock_root/build_artifacts/argon2-cffi_1640817743617/work
-argon2-cffi-bindings @ file:///D:/bld/argon2-cffi-bindings_1666850778155/work
-asttokens @ file:///home/conda/feedstock_root/build_artifacts/asttokens_1670263926556/work
-async-timeout @ file:///home/conda/feedstock_root/build_artifacts/async-timeout_1640026696943/work
-attrs @ file:///home/conda/feedstock_root/build_artifacts/attrs_1671632566681/work
-backcall @ file:///home/conda/feedstock_root/build_artifacts/backcall_1592338393461/work
-backports.functools-lru-cache @ file:///home/conda/feedstock_root/build_artifacts/backports.functools_lru_cache_1618230623929/work
-beautifulsoup4 @ file:///home/conda/feedstock_root/build_artifacts/beautifulsoup4_1649463573192/work
-bleach @ file:///home/conda/feedstock_root/build_artifacts/bleach_1674535352125/work
-brotlipy @ file:///D:/bld/brotlipy_1666764911856/work
+argon2-cffi==21.3.0
+argon2-cffi-bindings==21.2.0
+asttokens==2.2.1
+async-timeout==4.0.2
+attrs==22.2.0
+backcall==0.2.0
+backports.functools-lru-cache==1.6.4
+beautifulsoup4==4.11.1
+bleach==6.0.0
+brotlipy==0.7.0
 certifi==2022.12.7
-cffi @ file:///D:/bld/cffi_1671179504620/work
-charset-normalizer @ file:///home/conda/feedstock_root/build_artifacts/charset-normalizer_1661170624537/work
-click @ file:///D:/bld/click_1666798499870/work
+cffi==1.15.1
+charset-normalizer==2.1.1
+click==8.1.3
 cloudpickle==2.2.0
-colorama @ file:///home/conda/feedstock_root/build_artifacts/colorama_1666700638685/work
-comm @ file:///home/conda/feedstock_root/build_artifacts/comm_1670575068857/work
-contourpy @ file:///D:/bld/contourpy_1673633798610/work
-cryptography @ file:///D:/bld/cryptography-split_1672674258620/work
-cycler @ file:///home/conda/feedstock_root/build_artifacts/cycler_1635519461629/work
-dataclasses @ file:///home/conda/feedstock_root/build_artifacts/dataclasses_1628958434797/work
+colorama==0.4.6
+comm==0.1.2
+contourpy==1.0.7
+cryptography==39.0.0
+cycler==0.11.0
+dataclasses==0.8
 datasets==2.8.0
-debugpy @ file:///D:/bld/debugpy_1674522613866/work
-decorator @ file:///home/conda/feedstock_root/build_artifacts/decorator_1641555617451/work
-defusedxml @ file:///home/conda/feedstock_root/build_artifacts/defusedxml_1615232257335/work
-dill @ file:///home/conda/feedstock_root/build_artifacts/dill_1666603105584/work
-entrypoints @ file:///home/conda/feedstock_root/build_artifacts/entrypoints_1643888246732/work
+debugpy==1.6.6
+decorator==5.1.1
+defusedxml==0.7.1
+dill==0.3.6
+entrypoints==0.4
 evaluate==0.2.2
-executing @ file:///home/conda/feedstock_root/build_artifacts/executing_1667317341051/work
+executing==1.2.0
 fastavro==1.7.0
 fasteners==0.18
-fastjsonschema @ file:///home/conda/feedstock_root/build_artifacts/python-fastjsonschema_1663619548554/work/dist
-filelock @ file:///home/conda/feedstock_root/build_artifacts/filelock_1672354931606/work
-flit_core @ file:///home/conda/feedstock_root/build_artifacts/flit-core_1667734568827/work/source/flit_core
-fonttools @ file:///D:/bld/fonttools_1666827191800/work
-frozenlist @ file:///D:/bld/frozenlist_1667935581907/work
-fsspec @ file:///home/conda/feedstock_root/build_artifacts/fsspec_1674184942191/work
+fastjsonschema==2.16.2
+filelock==3.9.0
+flit_core==3.8.0
+fonttools==4.38.0
+frozenlist==1.3.3
+fsspec==2023.1.0
 grpcio==1.50.0
 hdfs==2.7.0
 httplib2==0.20.4
 huggingface-hub==0.12.0
-idna @ file:///home/conda/feedstock_root/build_artifacts/idna_1663625384323/work
-importlib-metadata @ file:///home/conda/feedstock_root/build_artifacts/importlib-metadata_1672612343532/work
-importlib-resources @ file:///home/conda/feedstock_root/build_artifacts/importlib_resources_1672681417544/work
-ipykernel @ file:///D:/bld/ipykernel_1673894762113/work
-ipython @ file:///D:/bld/ipython_1672758759297/work
+idna==3.4
+importlib-metadata==6.0.0
+importlib-resources==5.10.2
+ipykernel==6.20.2
+ipython==8.8.0
 ipython-genutils==0.2.0
-ipywidgets @ file:///home/conda/feedstock_root/build_artifacts/ipywidgets_1671720089366/work
-jedi @ file:///home/conda/feedstock_root/build_artifacts/jedi_1669134318875/work
-Jinja2 @ file:///home/conda/feedstock_root/build_artifacts/jinja2_1654302431367/work
-joblib @ file:///home/conda/feedstock_root/build_artifacts/joblib_1663332044897/work
-jsonschema @ file:///home/conda/feedstock_root/build_artifacts/jsonschema-meta_1669810440410/work
-jupyter @ file:///D:/bld/jupyter_1670249824040/work
-jupyter-console @ file:///home/conda/feedstock_root/build_artifacts/jupyter_console_1655961255101/work
-jupyter-events @ file:///home/conda/feedstock_root/build_artifacts/jupyter_events_1673559782596/work
-jupyter_client @ file:///home/conda/feedstock_root/build_artifacts/jupyter_client_1673615989977/work
-jupyter_core @ file:///D:/bld/jupyter_core_1674601317255/work
-jupyter_server @ file:///home/conda/feedstock_root/build_artifacts/jupyter_server_1673574425232/work
-jupyter_server_terminals @ file:///home/conda/feedstock_root/build_artifacts/jupyter_server_terminals_1673491454549/work
-jupyterlab-pygments @ file:///home/conda/feedstock_root/build_artifacts/jupyterlab_pygments_1649936611996/work
-jupyterlab-widgets @ file:///home/conda/feedstock_root/build_artifacts/jupyterlab_widgets_1671722028097/work
-kiwisolver @ file:///D:/bld/kiwisolver_1666805810106/work
-MarkupSafe @ file:///D:/bld/markupsafe_1674135937271/work
-matplotlib @ file:///D:/bld/matplotlib-suite_1674079062010/work
-matplotlib-inline @ file:///home/conda/feedstock_root/build_artifacts/matplotlib-inline_1660814786464/work
-mistune @ file:///home/conda/feedstock_root/build_artifacts/mistune_1657892024508/work
-multidict @ file:///D:/bld/multidict_1672339664306/work
-multiprocess @ file:///D:/bld/multiprocess_1666933014913/work
+ipywidgets==8.0.4
+jedi==0.18.2
+Jinja2==3.1.2
+joblib==1.2.0
+jsonschema==4.17.3
+jupyter==1.0.0
+jupyter_client==7.4.9
+jupyter-console==6.4.4
+jupyter_core==5.1.5
+jupyter-events==0.6.3
+jupyter_server==2.1.0
+jupyter_server_terminals==0.4.4
+jupyterlab-pygments==0.2.2
+jupyterlab-widgets==3.0.5
+kiwisolver==1.4.4
+MarkupSafe==2.1.2
+matplotlib==3.6.3
+matplotlib-inline==0.1.6
+mistune==2.0.4
+multidict==6.0.4
+multiprocess==0.70.14
 munkres==1.1.4
 mwparserfromhell==0.6.4
-nbclassic @ file:///home/conda/feedstock_root/build_artifacts/nbclassic_1667492839781/work
-nbclient @ file:///home/conda/feedstock_root/build_artifacts/nbclient_1669795076334/work
-nbconvert @ file:///home/conda/feedstock_root/build_artifacts/nbconvert-meta_1674590374792/work
-nbformat @ file:///home/conda/feedstock_root/build_artifacts/nbformat_1673560067442/work
-nest-asyncio @ file:///home/conda/feedstock_root/build_artifacts/nest-asyncio_1664684991461/work
-notebook @ file:///home/conda/feedstock_root/build_artifacts/notebook_1667565639349/work
-notebook_shim @ file:///home/conda/feedstock_root/build_artifacts/notebook-shim_1667478401171/work
-numpy @ file:///D:/bld/numpy_1672415894508/work
-packaging @ file:///home/conda/feedstock_root/build_artifacts/packaging_1673482170163/work
-pandas @ file:///D:/bld/pandas_1674136566687/work
-pandocfilters @ file:///home/conda/feedstock_root/build_artifacts/pandocfilters_1631603243851/work
-parso @ file:///home/conda/feedstock_root/build_artifacts/parso_1638334955874/work
-pickleshare @ file:///home/conda/feedstock_root/build_artifacts/pickleshare_1602536217715/work
-Pillow @ file:///D:/bld/pillow_1672675445317/work
-pkgutil_resolve_name @ file:///home/conda/feedstock_root/build_artifacts/pkgutil-resolve-name_1633981968097/work
-platformdirs @ file:///home/conda/feedstock_root/build_artifacts/platformdirs_1672264874562/work
+nbclassic==0.4.8
+nbclient==0.7.2
+nbconvert==7.2.9
+nbformat==5.7.3
+nest-asyncio==1.5.6
+notebook==6.5.2
+notebook_shim==0.2.2
+numpy==1.24.1
+packaging==23.0
+pandas==1.5.3
+pandocfilters==1.5.0
+parso==0.8.3
+pickleshare==0.7.5
+Pillow==9.4.0
+pip==22.3.1
+pkgutil_resolve_name==1.3.10
+platformdirs==2.6.2
 ply==3.11
-prometheus-client @ file:///home/conda/feedstock_root/build_artifacts/prometheus_client_1674535637125/work
-prompt-toolkit @ file:///home/conda/feedstock_root/build_artifacts/prompt-toolkit_1670414775770/work
+prometheus-client==0.16.0
+prompt-toolkit==3.0.36
 proto-plus==1.22.1
 protobuf==4.21.12
-psutil @ file:///D:/bld/psutil_1667886078163/work
-pure-eval @ file:///home/conda/feedstock_root/build_artifacts/pure_eval_1642875951954/work
+psutil==5.9.4
+pure-eval==0.2.2
 pyarrow==10.0.1
-pycparser @ file:///home/conda/feedstock_root/build_artifacts/pycparser_1636257122734/work
-Pygments @ file:///home/conda/feedstock_root/build_artifacts/pygments_1672682006896/work
-pyOpenSSL @ file:///home/conda/feedstock_root/build_artifacts/pyopenssl_1672659226110/work
-pyparsing @ file:///home/conda/feedstock_root/build_artifacts/pyparsing_1652235407899/work
+pycparser==2.21
+Pygments==2.14.0
+pyOpenSSL==23.0.0
+pyparsing==3.0.9
 PyQt5==5.15.7
-PyQt5-sip @ file:///D:/bld/pyqt-split_1674666773953/work/pyqt_sip
-pyrsistent @ file:///D:/bld/pyrsistent_1672681635682/work
-PySocks @ file:///D:/bld/pysocks_1661604991356/work
-python-dateutil @ file:///home/conda/feedstock_root/build_artifacts/python-dateutil_1626286286081/work
-python-json-logger @ file:///home/conda/feedstock_root/build_artifacts/python-json-logger_1671655909697/work
-pytz @ file:///home/conda/feedstock_root/build_artifacts/pytz_1673864280276/work
+PyQt5-sip==12.11.0
+pyrsistent==0.19.3
+PySocks==1.7.1
+python-dateutil==2.8.2
+python-json-logger==2.0.4
+pytz==2022.7.1
 pywin32==304
-pywinpty @ file:///D:/bld/pywinpty_1672753227989/work/target/wheels/pywinpty-2.0.10-cp38-none-win_amd64.whl
-PyYAML @ file:///D:/bld/pyyaml_1666772539683/work
-pyzmq @ file:///D:/bld/pyzmq_1673612833153/work
-qtconsole @ file:///home/conda/feedstock_root/build_artifacts/qtconsole-base_1667404144336/work
-QtPy @ file:///home/conda/feedstock_root/build_artifacts/qtpy_1667873092748/work
-regex @ file:///D:/bld/regex_1667265277293/work
-requests @ file:///home/conda/feedstock_root/build_artifacts/requests_1673863902341/work
+pywinpty==2.0.10
+PyYAML==6.0
+pyzmq==25.0.0
+qtconsole==5.4.0
+QtPy==2.3.0
+regex==2022.10.31
+requests==2.28.2
 responses==0.18.0
-rfc3339-validator @ file:///home/conda/feedstock_root/build_artifacts/rfc3339-validator_1638811747357/work
-rfc3986-validator @ file:///home/conda/feedstock_root/build_artifacts/rfc3986-validator_1598024191506/work
+rfc3339-validator==0.1.4
+rfc3986-validator==0.1.1
 sacremoses==0.0.43
-Send2Trash @ file:///home/conda/feedstock_root/build_artifacts/send2trash_1628511208346/work
-sip @ file:///D:/bld/sip_1669040074882/work
-six @ file:///home/conda/feedstock_root/build_artifacts/six_1620240208055/work
-sniffio @ file:///home/conda/feedstock_root/build_artifacts/sniffio_1662051266223/work
-soupsieve @ file:///home/conda/feedstock_root/build_artifacts/soupsieve_1658207591808/work
-stack-data @ file:///home/conda/feedstock_root/build_artifacts/stack_data_1669632077133/work
-terminado @ file:///D:/bld/terminado_1666707934477/work
-tinycss2 @ file:///home/conda/feedstock_root/build_artifacts/tinycss2_1666100256010/work
+Send2Trash==1.8.0
+setuptools==66.1.1
+sip==6.7.5
+six==1.16.0
+sniffio==1.3.0
+soupsieve==2.3.2.post1
+stack-data==0.6.2
+terminado==0.17.0
+tinycss2==1.2.1
 tokenizers==0.13.0.dev0
-toml @ file:///home/conda/feedstock_root/build_artifacts/toml_1604308577558/work
+toml==0.10.2
 torch==1.13.1
 torchaudio==0.13.1
 torchvision==0.14.1
-tornado @ file:///D:/bld/tornado_1666788847934/work
-tqdm @ file:///home/conda/feedstock_root/build_artifacts/tqdm_1662214488106/work
-traitlets @ file:///home/conda/feedstock_root/build_artifacts/traitlets_1673359992537/work
+tornado==6.2
+tqdm==4.64.1
+traitlets==5.8.1
 transformers==4.26.0
-typing_extensions @ file:///home/conda/feedstock_root/build_artifacts/typing_extensions_1665144421445/work
-unicodedata2 @ file:///D:/bld/unicodedata2_1667240053339/work
-urllib3 @ file:///home/conda/feedstock_root/build_artifacts/urllib3_1673452138552/work
-wcwidth @ file:///home/conda/feedstock_root/build_artifacts/wcwidth_1673864653149/work
+typing_extensions==4.4.0
+unicodedata2==15.0.0
+urllib3==1.26.14
+wcwidth==0.2.6
 webencodings==0.5.1
-websocket-client @ file:///home/conda/feedstock_root/build_artifacts/websocket-client_1667568040382/work
-widgetsnbextension @ file:///home/conda/feedstock_root/build_artifacts/widgetsnbextension_1672066693230/work
-win-inet-pton @ file:///D:/bld/win_inet_pton_1667051142467/work
-xxhash @ file:///D:/bld/python-xxhash_1672695238886/work
-yarl @ file:///D:/bld/yarl_1672341204408/work
-zipp @ file:///home/conda/feedstock_root/build_artifacts/zipp_1669453021653/work
+websocket-client==1.4.2
+wheel==0.38.4
+widgetsnbextension==4.0.5
+win-inet-pton==1.1.0
+xxhash==0.0.0
+yarl==1.8.2
+zipp==3.11.0
