--- a/environment.yml
+++ b/environment.yml
@@ -4,6 +4,7 @@ channels:
   - huggingface
   - nvidia
   - conda-forge
+  - defaults
 dependencies:
   - cuda=11.7.1
   - cuda-toolkit=11.7.1
@@ -12,7 +13,7 @@ dependencies:
   - numpy=1.24.1
   - pip=22.3.1
   - python=3.8.15
-  - pytorch=1.13.1=py3.8_cuda11.7_cudnn8_0
+  - pytorch=1.13.1=py3.8_cuda11.7*
   - pytorch-cuda=11.7
   - tokenizers=0.13.0.dev0
   - transformers=4.26.0
