--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,7 @@ data/*
 models/*
 __pycache__
 run.log
+
+# Remove stuff that I used for local experimentation lol
+playground.ipynb
+.ipynb_checkpoints
