--- a/environment.yml
+++ b/environment.yml
@@ -13,9 +13,11 @@ dependencies:
   - jupyter=1.0.0
   - numpy=1.24.1
   - pip=22.3.1
-  - pytest=
+    - evaluate=0.4.0
+  - pytest=7.2.1
   - python=3.8.15
   - pytorch=1.13.1=py3.8_cuda11.7*
   - pytorch-cuda=11.7
+  - scikit-learn=1.3.0
   - tokenizers=0.13.0.dev0
   - transformers=4.29.2
