--- a/environment.yml
+++ b/environment.yml
@@ -6,18 +6,18 @@ channels:
   - conda-forge
   - defaults
 dependencies:
-  - accelerate=0.20.1
   - cuda=11.7.1
   - cuda-toolkit=11.7.1
   - datasets=2.8.0
   - jupyter=1.0.0
   - numpy=1.24.1
-  - pip=22.3.1
-    - evaluate=0.4.0
   - pytest=7.2.1
   - python=3.8.15
   - pytorch=1.13.1=py3.8_cuda11.7*
   - pytorch-cuda=11.7
   - scikit-learn=1.3.0
-  - tokenizers=0.13.0.dev0
+  - tokenizers=0.13.2
   - transformers=4.29.2
+  - pip:
+    - accelerate=0.20.1
+    - evaluate=0.4.0
