--- a/environment.yml
+++ b/environment.yml
@@ -11,6 +11,7 @@ dependencies:
   - datasets=2.8.0
   - jupyter=1.0.0
   - numpy=1.24.1
+  - pip=22.3.1
   - pytest=7.2.1
   - python=3.8.15
   - pytorch=1.13.1=py3.8_cuda11.7*
