--- a/environment.yml
+++ b/environment.yml
@@ -1,4 +1,4 @@
-name: temporal_bert_models
+name: temporal-models
 channels:
   - pytorch
   - huggingface
@@ -6,19 +6,12 @@ channels:
   - conda-forge
   - defaults
 dependencies:
-  - cuda=11.7.1
-  - cuda-toolkit=11.7.1
-  - datasets=2.8.0
-  - jupyter=1.0.0
-  - numpy=1.24.1
-  - pip=22.3.1
-  - pytest=7.2.1
-  - python=3.8.15
-  - pytorch=1.13.1=py3.8_cuda11.7*
-  - pytorch-cuda=11.7
-  - scikit-learn=1.3.0
-  - tokenizers=0.13.2
-  - transformers=4.29.2
-  - pip:
-    - accelerate=0.20.1
-    - evaluate=0.4.0
+  - accelerate=0.23.0
+  - datasets=2.14.5
+  - evaluate=0.4.0
+  - pytest=7.4.2
+  - python=3.11.5
+  - pytorch=2.0.1
+  - pytorch-cuda=11.8
+  - tokenizers=0.13.3
+  - transformers=4.33.2
