--- a/environment.yml
+++ b/environment.yml
@@ -13,5 +13,6 @@ dependencies:
   - python=3.11.5
   - pytorch=2.0.1
   - pytorch-cuda=11.8
+  - scikit-learn=1.3.1
   - tokenizers=0.13.3
   - transformers=4.33.2
