--- a/environment.yml
+++ b/environment.yml
@@ -14,5 +14,6 @@ dependencies:
   - pytorch=2.0.1
   - pytorch-cuda=11.8
   - scikit-learn=1.3.1
+  - sentencepiece=0.1.99
   - tokenizers=0.13.3
   - transformers=4.33.2
